# 18Henok

./: week1.ipynb  week2_matplotlib.ipynb
homework/: week2_hw.ipynb
projects/: exampleSlideDeck.ipynb  projectPlanner.ipynb
projects/1explore/health_risk_sorting_analysis/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
projects/1explore/health_risk_sorting_analysis/docs/: mkdocs.yml
projects/1explore/health_risk_sorting_analysis/docs/docs/: index.md
projects/1explore/health_risk_sorting_analysis/models/: models.ipynb  models.slides.html
reflections/: reflection guidelines.docx  reflection_1.docx
weeklyCode/: Week4_polynomials.ipynb  week1.ipynb  week2_matplotlib.ipynb  week3_3d.ipynb  week6_FT.ipynb  week7_Calculus.ipynb  week7_diff_Eq.ipynb  weeklyCodeTemplate.ipynb
