[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "health_risk_sorting_analysis"
version = "0.0.1"
description = "Using Numpy, Matplotlib, and ipywidgets to display popular sorting algorithms. First, I use a sleep health dataset from Kaggle, then create a health risk formula. After that, I will create a widget that shows different sorting algorithims."
authors = [
  { name = "Henok Y. Tilahun" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["health_risk_sorting_analysis"]
force_sort_within_sections = true
